# Study

./: Linux_serial_comm.jdy  Linux嵌入式开发.jdy  README.md  Ubuntu_modify_username.jdy  abbr.jdy  abbr.md  cpp_smart_ptr.jdy  find_grep.jdy  git_study.c  git_sugr.jdy  learn.c  learn.jdy  learn_markdown.jdy  p2p_std.jdy  prep.jdy  prep.md  shellscript_study.c  shellscript_study.jdy  stdC_sty.jdy  std_web.jdy  study_makefile.jdy  study_makefile.md  tar.md  tempplate&STL.jdy  web_require
CPP/: CPP_STDY.md  cpp_review.jdy
DEBUG/: debug.h  debug.jdy  memory_leak_debug.c  memory_leak_debug.md  my-logsys.md  serial_number.c
DataStructure_Arithmetic/: 02find.c  03sort.c  Arithmetic.md  a.out  linux内核数据结构之kfifo.md  list.md  loop_queue.c  loop_queue_l.c  queue_l.c  ring_buffer.h  ring_buffer_test.c  roundup_pow_of_two_test.c  std.jdy  yc_voice_ctrl.c  yc_voice_ctrl.h
FTP/: auto_ftp.sh  ftp.jdy
GDB/: GDB_std.md  LINUX 多线程core文件设置与分析的学习.md  core_test.c  coredump_test.c  gdb.jdy
Git/: git_bundle.jdy  git_repo.md  git_repo_sample.md  git_study.jdy  git_study.md  git_tag.jdy
HTTP/: curl.md  curl的用法指南.html  http_stdy.md  http_study.jdy
I2CTOOL/: Linux-i2c-driver.md  i2c-tools-3.rar  i2cWrite.c  i2cWrite.h  i2c_std.md  i2ctool.jdy  linux设备驱动开发详解 通过O_RDWR IOCTL 读写i2c设备 - CSDN博客.html
I2S/: i2s_std.jdy
Internet/: wifi.c  (+12 more)
Linux/GPIO/snd_playback/: CMakeLists.txt  build.sh  gpio_sysfs_ctrl.c  gpio_sysfs_ctrl.h  mute.c  spk.c
UC/msg_broker/MsgBroker/: CMakeLists.txt  Makefile
UC/msg_broker/MsgBroker/inc/: msg_broker.h  msg_video.h
UC/msg_broker/MsgBroker/src/: msg_broker.c
(+508 files in other folders)
